# your-game

./: .gitignore  LICENSE  README.md  devDocs.txt
Modules/: FindAllegro.cmake
msa3k/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Makefile  Makefile.dev  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  msa3k.out  msa3k.out.vcxproj  msa3k.out.vcxproj.filters  msa3k.sln  msa3k.vcxproj  msa3k.vcxproj.filters
msa3k.out.dir/: msa3k.out.lastbuildstate
msa3k/resources/: new.txt
msa3k/source/: .msa3k.cpp.swp  audio.cpp  audio.h  constants.h  entity.cpp  entity.h  game.cpp  game.h  gamestate.cpp  gamestate.h  init.cpp  init.h  input.cpp  input.h  msa3k.cpp  render.cpp  render.h
msa3k/src/: .CMakeLists.txt.swp  .input.cpp.swp  .input.h.swp  .render.cpp.swp  .render.h.swp  CMakeLists.txt  audio.cpp  audio.h  entity.cpp  entity.h  entitymanager.cpp  entitymanager.h  game.cpp  game.h  gamedata.cpp  gamedata.h  gamestate.cpp  gamestate.h  helper.cpp  helper.h  init.cpp  init.h  input.cpp  input.h  msa3k.cpp  playerentity.cpp  playerentity.h  render.cpp  render.h
msa3k/test/: helper.cpp  helper.h
